# Croft

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json
.claude/agents/: opencode-bridge.md
.github/workflows/: ci.yml  release.yml
.opencode/agents/: code-reviewer.md  i18n-locales.md  ipc-bridge.md  react-frontend.md  release-manager.md  rust-backend.md
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_schema.sql  0003_exchange_rates.sql
src-tauri/src/: db.rs  financial.rs  lib.rs  models.rs
src-tauri/src/commands/: accounts.rs  budgets.rs  categories.rs  currency.rs  export.rs  import.rs  mod.rs  recurring.rs  reports.rs  settings.rs  transactions.rs
src/components/: Modal.tsx  Sidebar.tsx  TopBar.tsx
src/context/: toast.tsx
src/lib/: format.ts  i18n.ts  languages.ts  tauri.ts
src/locales/: ar.json  br.json  de.json  en.json  es.json  fr.json  hi.json  it.json  ja.json  pt.json  ru.json  tr.json  zh-cn.json  zh-tw.json
src/screens/: AccountsScreen.tsx  BudgetScreen.tsx  ImportScreen.tsx  NetWorthScreen.tsx  OnboardingScreen.tsx  RecurringScreen.tsx  ReportsScreen.tsx  SettingsScreen.tsx  SubscriptionsScreen.tsx  TransactionsScreen.tsx
